# detectwin

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README  a.out  compare_by_data.c  compare_by_name.c  compares.c  compares.h  config.h  core.c  displayDir  displayDir.c  displayDir.h  explorer.c  items.c  items.h  main_truc.c  move_file.c  rename.c  selection.c  selection.h  test3.txt  test_pout_move.c  ui.c  ui.h
commands/: delete_file.c  help.c
includes/: compares.h  config.h  selection.h  ui.h
sources/: explorer.c  selection.c  ui.c
sources/commands/: rename.c
